--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header></header>
+    <header class="for-flex">
+        <div class="speaker-view for-flex">
+            <i class="fas fa-th"></i>
+            <p class="write-white">Speaker View</p>
+        </div>
+        <div class="expand-arrows">
+            <i class="fas fa-expand-arrows-alt"></i>
+        </div>
+    </header>
     <main></main>
     <footer></footer>    
 </body>
