--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zoom Meetings</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="https://st1.zoom.us/zoom.ico" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- HEADER -->
     <header class="for-flex">
         <div class="speaker-view for-flex">
             <i class="fas fa-th"></i>
@@ -20,167 +22,434 @@
             <i class="fas fa-expand-arrows-alt"></i>
         </div>
     </header>
-
+    <!-- ------------------- -->
+<!-- MAIN -->
     <main class="for-flex">
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 5 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 10 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
-        </div> <div class="container-image">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
+        </div>
+        <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 15 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 20 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 25 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 30 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 35 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
-        </div> <div class="container-image">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
+        </div>
+        <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 40 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 45 -->
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <div class="container-image">
             <img src="./img/36-246x146.jpg" alt="Profile Photo">
+            <div class="name-partecipant">
+                <i class="fas fa-microphone-slash"></i>
+                <span>Pinco Pallo<span>
+            </div>
         </div>
         <!-- 50 -->
     </main>
-    <footer></footer>    
+    <!-- ------------------------------ -->
+    <footer>
+       <div class="footer-container for-flex">
+            <!-- COLONNA A SINISTRA -->
+            <div class="col w-200 for-flex">                
+                <div class="mute">
+                    <i class="fas fa-microphone"></i>
+                    <p>Mute</p>
+                </div>
+                <div class="chevron-up">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <div class="stop-video">
+                    <i class="fas fa-video"></i>
+                    <p>Stop Video</p>
+                </div>
+                <div class="chevron-up">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+            </div>
+            <!-- COLONNA CENTRALE -->
+            <div class="col w-1000 for-flex">                
+                <div class="col for-flex">
+                <div class="add-user">
+                    <i class="fas fa-user-plus"></i>
+                    <p>Invite</p>
+                </div>
+                <div class="tow-users">
+                    <i class="fas fa-user-friends"></i>
+                    <p>Manage Partecipants</p>
+                </div>
+                <div class="charts">
+                    <i class="fas fa-chart-bar"></i>
+                    <p>Polling</p>
+                </div>
+                <div class="share-square">
+                    <i class="fas fa-share-square"></i>
+                    <p>Share Screen</p>
+                </div>
+                <div class="chevron-up">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <div class="comment">
+                    <i class="fas fa-comment"></i>
+                    <p>Chat</p>
+                </div>
+                <div class="record">
+                    <i class="fas fa-record-vinyl"></i>
+                    <p>Record</p>
+                </div>
+                <div class="rooms">
+                    <i class="fas fa-th-large"></i>
+                    <p>Breakout Rooms</p>
+                </div>
+                <div class="dots">
+                    <i class="fas fa-ellipsis-h"></i>
+                    <p>More</p>
+                </div>
+            </div>
+            <!-- COLONNA A DESTRA -->
+            <div class="col w-200 for-flex">
+                <p class="leave-room">End Meeting</p>
+            </div>
+        </div>
+    </footer>    
 </body>
 </html>         
