finito Footer, inserito active sui microfoni dei singoli riquadri e modificato colore div.share-square

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     <footer>
        <div class="footer-container for-flex">
             <!-- COLONNA A SINISTRA -->
-            <div class="col w-200 for-flex">                
+            <div class="col left for-flex">                
                 <div class="mute">
                     <i class="fas fa-microphone"></i>
                     <p>Mute</p>
@@ -407,13 +407,12 @@
                 </div>
             </div>
             <!-- COLONNA CENTRALE -->
-            <div class="col w-1000 for-flex">                
-                <div class="col for-flex">
+            <div class="col central for-flex">                
                 <div class="add-user">
                     <i class="fas fa-user-plus"></i>
                     <p>Invite</p>
                 </div>
-                <div class="tow-users">
+                <div class="two-users">
                     <i class="fas fa-user-friends"></i>
                     <p>Manage Partecipants</p>
                 </div>
@@ -446,7 +445,7 @@
                 </div>
             </div>
             <!-- COLONNA A DESTRA -->
-            <div class="col w-200 for-flex">
+            <div class="col right for-flex">
                 <p class="leave-room">End Meeting</p>
             </div>
         </div>
